# peanut-pos

./: .gitignore  CHANGELOG.md  LICENSE  Makefile.ps1  README.md  docker-compose.yml  init-novapos.ps1  migrate-all.ps1  package-lock.json  package.json  regenerate-sqlx-data.ps1  rust-toolchain.toml  services_notes.txt  services_startup.txt  sqlx-query-report.json
services/: Cargo.toml  build_err.txt
services/.cargo/: config.toml
services/analytics-service/: Cargo.toml  Dockerfile  build.rs
services/analytics-service/migrations/: 9001_create_inbox_table.sql
services/analytics-service/src/: analytics_handlers.rs  main.rs
services/audit-consumer/: Cargo.toml
services/audit-consumer/src/: main.rs
services/audit-coverage/: Cargo.toml
services/audit-coverage/src/: main.rs
services/auth-service/: Cargo.toml  Dockerfile  build.rs  docker-entrypoint.sh  sqlx-data.json
services/auth-service/.cargo/: config.toml
services/auth-service/.sqlx/: query-15ea89c83e79e238eb297ebe1dea01ef1b46a797d74f8f1d021c56bb3490d967.json  query-25069853449b11b7ae346152adc318a31ec6e52f5c5d3e7d65c27866af058553.json  query-29e908f67fd21eee72d4f8a7f728bbe232aebe8afa9067b4b821a2347dc8f364.json  query-5bf63323f09beceb8030ceae9b9cddd5ebd3bbac02c786261ab7802389f68211.json  query-7d7deb8feb8cdba4b095a3c81175a47c97111e646d447c7b3a6bb3d8bb20362a.json  query-eb61d1c1c253050300f3211d3f26c0474be425b3282486993e36a075ee1dd571.json
services/auth-service/migrations/: 0001_create_users_and_tenants.sql  3002_seed_super_admin.sql  3003_create_integration_keys.sql  3004_add_user_role_check.sql  3005_add_account_lock_columns.sql  3006_create_auth_signing_keys.sql  3007_create_auth_refresh_tokens.sql  3008_add_mfa_columns.sql  3009_add_user_lifecycle_fields.sql
services/auth-service/src/: app.rs  config.rs  lib.rs  main.rs  metrics.rs  mfa.rs  mfa_handlers.rs  notifications.rs  tenant_handlers.rs  tokens.rs  user_handlers.rs
services/auth-service/tests/: axum_smoke.rs  jwks_loadshed.rs  login_flow.rs  session_flow.rs  stack_smoke.rs  token_signer.rs
services/common/audit/: Cargo.toml  build.rs
services/common/auth/: Cargo.toml
services/common/crypto/: Cargo.toml
services/common/http-errors/: Cargo.toml
services/common/money/: Cargo.toml
services/common/observability/: Cargo.toml
services/common/security/: Cargo.toml
services/customer-service/: Cargo.toml  Dockerfile  build.rs  sqlx-data.json
services/customer-service/.sqlx/: query-01e21b1ae51e03e760044b7901baa0419deb247ffe08cf831e8d280ab3c9e466.json  query-0fea4d2b683f5edca864a4efa9774a4cac6d2d7b04cf87e765d46f739c2128ce.json  query-2bccbe4f1e77bfe7f99461aec3f7c1a18201ea756f9265c028221535c610f8d8.json  query-4a2659dc65bda9367545cdd3e2e03bd33d99c065faeb5ba1be180afb2b624512.json  query-53b44636f542bfc67d14270faa4443e09acf35e8efb0c3f9a931e9621c5fdfa4.json  query-60ac2ac6d5f1551eabdef032d6dc1256c7c209b3187c55f0f91472b65a3b9e75.json  query-94538961bb8f332ca88f820f38094914c9964b0d574e47d1222da8fde4c0830c.json
services/customer-service/migrations/: 0001_create_customers.sql  5002_add_tenant_data_keys.sql  5003_add_customer_encrypted_columns.sql  5004_create_gdpr_tombstones.sql
services/customer-service/src/: handlers.rs  lib.rs  main.rs
services/customer-service/tests/: db_encryption_harness.rs  error_regression.rs  error_shape.rs  role_acceptance.rs
services/integration-gateway/: Cargo.toml  Dockerfile  README.md  build.rs  docker-entrypoint.sh  tenant_config.json
services/integration-gateway/migrations/: 7001_add_api_key_usage_table.sql
services/integration-gateway/src/: alerts.rs  app_state.rs  config.rs  events.rs  integration_handlers.rs  lib.rs  main.rs  metrics.rs  rate_limiter.rs  usage.rs  validation.rs  webhook_handlers.rs
services/integration-gateway/tests/: deny_path_capability.rs  error_regression.rs  error_shape.rs  metrics_rpm_target.rs  rate_limit_alert_capture.rs  security_extractor_headers.rs  void_payment.rs  void_payment_kafka.rs  void_payment_no_capture.rs
services/inventory-service/: Cargo.toml  Dockerfile  README.md  build.rs  sqlx-data.json
services/inventory-service/.sqlx/: query-056acea3529fc45fb3cec3bbb7fb145e60abd5091fde213b99807d0f0c4a8903.json  query-13aa2cbce7c2014390961c80ea344dabeaefddd20b2ea4cedec457933f9c1a78.json  query-1ee8b22e398e6f4f4848b21c26207cea0ca41fcbacc4292bf4c8be0b5ec3395c.json  query-213d5abcfe8488c589c810ac4a8fb4029a6414cde7d1f1a4c144c05b38cc3a94.json  query-59dfd0178435eb73032d755b0e8339f31ec94ebb55ed6064603bc4b0d6cda65a.json  query-7fbe3d75ddf7cecfbd3d63072d91dc5962b2df3e21d7edf259ca21c8d5df0226.json  query-a4998bd293c173b722eaa59104a044a748687af8e44f8d7b567d633d792310c0.json  query-d2d71241451be154b108a10d7280046df73e9e131bddf47770cfa4f2765d0ccc.json  query-ebd5b93ee40584e2ad093d9e7d5339399cceb1125a9828b82ad2be937bb98e74.json
services/inventory-service/docs/: MULTI_LOCATION_ERD.md
services/inventory-service/migrations/: 0001_create_inventory.sql  4002_create_inventory_reservations.sql  4003_create_locations.sql  4004_create_inventory_items_multilocation.sql  4005_backfill_inventory_items.sql  4006_create_idempotency_and_outbox.sql  4007_create_inbox_table.sql
services/inventory-service/src/: inventory_handlers.rs  lib.rs  location_handlers.rs  main.rs  reservation_handlers.rs
services/inventory-service/tests/: error_regression.rs  error_shape.rs  multilocation_lifecycle.rs  reservation_extractor_tests.rs  role_acceptance.rs  security_extractor_tests.rs  test_utils.rs
services/loyalty-service/: Cargo.toml  Dockerfile  build.rs  sqlx-data.json
services/loyalty-service/.sqlx/: query-9d32daa03935f7fe05d7124d09dc27eebb6d876785660f5e6defe419135daf00.json  query-d434605d0f47f2a458bb1771543d68f52d6ad2e94963f039cf2f7007b780f8ab.json  query-f08b604b0b11232a001275132cedf7cbbeb294697a3904212d72c8aed9d066af.json
services/loyalty-service/src/: api.rs  lib.rs  (+1 more)
services/order-service/: Cargo.toml  Dockerfile  README.md  build.rs  sqlx-data.json
services/payment-service/: Cargo.toml  Dockerfile  build.rs
services/product-service/: Cargo.toml  Dockerfile  README.md  build.rs
(+331 files in other folders)
