[workspace]
members = [
  "common/auth",
  "common/crypto",
  "common/money",
  "common/observability",
  "common/audit",
  "auth-service",
  "order-service",
  "product-service",
  "payment-service",
  "integration-gateway",
  "analytics-service",
  "inventory-service",
  "customer-service",
  "loyalty-service"
]
resolver = "2"
