[workspace]
members = [
  "common/auth",
  "common/crypto",
  "common/money",
  "common/observability",
  "common/audit",
  "common/security",
  "auth-service",
  "order-service",
  "product-service",
  "payment-service",
  "integration-gateway",
  "analytics-service",
  "inventory-service",
  "customer-service",
  "loyalty-service"
  ,"audit-coverage"
]
resolver = "2"

[workspace.lints.rust]
# Deny warnings for our workspace crates without affecting dependencies
warnings = "deny"

# Tighten previously relaxed lints; can flip to "deny" after a cycle if clean.
unexpected_cfgs = "warn"
mismatched_lifetimes = "warn"
