[package]
name = "analytics-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5", features = ["cors"] }
common-auth = { path = "../common/auth" }
common-money = { path = "../common/money" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
anyhow = "1"
thiserror = "1"
hyper = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rdkafka = { version = "0.29", default-features = false, features = ["cmake-build", "tokio", "libz", "libz-static"] }
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "bigdecimal"] }

[features]
# (No explicit offline feature; controlled via SQLX_OFFLINE env var.)



