[package]
name = "audit-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["fmt","env-filter"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"
uuid = { version = "1", features=["serde","v4"] }
chrono = { version = "0.4", features=["serde"] }
rdkafka = { version = "0.29", features=["cmake-build", "libz", "libz-static"] }
sqlx = { version = "0.7", features=["runtime-tokio-native-tls","postgres","macros","uuid","chrono","json"] }
tokio = { version = "1", features=["macros","rt-multi-thread","time","signal"] }
common-audit = { path = "../common/audit" }
axum = { version = "0.7", features=["json"] }

[features]
default = []
