[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
anyhow = "1"
thiserror = "1"
hyper = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono"] }
tower-http = { version = "0.5", features = ["cors"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = "0.6"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
