[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
common-auth = { path = "../common/auth" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
anyhow = "1"
thiserror = "1"
hyper = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono", "offline"] }
tower-http = { version = "0.5", features = ["cors"] }
argon2 = { version = "0.5", features = ["std"] }
rand_core = "0.6"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
rsa = { version = "0.9", features = ["pem"] }

data-encoding = "2"
hmac = "0.12"
sha1 = "0.10"
urlencoding = "2"
rdkafka = { version = "0.29", default-features = false, features = ["cmake-build", "tokio", "libz-static"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
prometheus = "0.13"
[target.'cfg(target_os = "windows")'.dependencies]
libz-sys = { version = "1.1.22", features = ["static"] }
[dev-dependencies]
dirs = "5"
pg-embed = { version = "0.7", default-features = false, features = ["rt_tokio"] }
tempfile = "3"
portpicker = "0.1"
tower = "0.5"
http-body-util = "0.1"

