[package]
name = "customer-service"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
common-auth = { path = "../common/auth" }
common-security = { path = "../common/security" }
common-crypto = { path = "../common/crypto" }
common-money = { path = "../common/money" }
common-http-errors = { path = "../common/http-errors" }
common-audit = { path = "../common/audit" }
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
prometheus = "0.13"

[features]
# Enables running integration tests requiring a live Postgres and other infra.
integration = []
# (No explicit offline feature; controlled via SQLX_OFFLINE env var.)
