[package]
name = "integration-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
common-auth = { path = "../common/auth" }
common-money = { path = "../common/money" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
anyhow = "1"
thiserror = "1"
hyper = "1"
rdkafka = { version = "0.29", default-features = false, features = ["cmake-build", "tokio", "libz", "libz-static"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
bytes = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono", "bigdecimal"] }
tower-http = { version = "0.5", features = ["cors"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
prometheus = "0.13"
chrono = { version = "0.4", features = ["serde"] }


