[package]
name = "loyalty-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5", features = ["cors"] }
common-auth = { path = "../common/auth" }
common-money = { path = "../common/money" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
axum = "0.7"
futures = "0.3"
rdkafka = { version = "0.29", default-features = false, features = ["cmake-build", "tokio", "libz-static"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "offline", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
libz-sys = { version = "1.1.22", features = ["static"] }
