[package]
name = "loyalty-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5", features = ["cors"] }
common-auth = { path = "../common/auth" }
common-security = { path = "../common/security" }
common-money = { path = "../common/money" }
common-http-errors = { path = "../common/http-errors" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
axum = "0.7"
futures = { version = "0.3", optional = true }
rdkafka = { version = "0.29", default-features = false, features = ["cmake-build", "tokio", "libz"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1.19"
prometheus = "0.13"
tower = "0.5"
common-audit = { path = "../common/audit" }

[features]
default = []
kafka-producer = ["rdkafka", "futures"]
kafka = ["kafka-producer"]
kafka-core = []
# Enables running integration tests that require external services (e.g., Postgres, Kafka)
integration = ["kafka-producer"]

