[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common-auth = { path = "../common/auth" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
anyhow = "1"
thiserror = "1"
hyper = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid"] }
rdkafka = { version = "0.29", features = ["cmake-build", "libz-static"] }
libz-sys = { version = "1.1.22", features = ["static"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"

tower-http = { version = "0.5", features = ["cors"] }
