[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common-auth = { path = "../common/auth" }
common-audit = { path = "../common/audit", features=["kafka"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
anyhow = "1"
thiserror = "1"
hyper = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono", "bigdecimal"] }
rdkafka = { version = "0.29", features = ["cmake-build", "libz", "libz-static"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
bigdecimal = { version = "0.3", features = ["serde"] }
common-money = { path = "../common/money" }
tower-http = { version = "0.5", features = ["cors"] }
common-security = { path = "../common/security" }

[features]
# (No explicit offline feature; controlled via SQLX_OFFLINE env var.)

