[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common-auth = { path = "../common/auth" }
common-audit = { path = "../common/audit", optional = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
anyhow = "1"
thiserror = "2"
hyper = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono", "bigdecimal"] }
rdkafka = { version = "0.29", features = ["cmake-build", "libz"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures-util = "0.3"
bigdecimal = { version = "0.3", features = ["serde"] }
common-money = { path = "../common/money" }
tower-http = { version = "0.5", features = ["cors"] }
common-security = { path = "../common/security" }
common-http-errors = { path = "../common/http-errors" }
prometheus = "0.13"
once_cell = "1.19"
tower = "0.5"

[lib]
name = "order_service"
path = "src/lib.rs"

[dev-dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
jsonwebtoken = "9"
time = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
http = "1"
once_cell = "1.19"
rsa = "0.9"

[features]
default = []
# Canonical producer feature (enable optional dep + rdkafka)
kafka-producer = ["dep:rdkafka", "dep:common-audit", "common-audit/kafka-producer"]
# Backward-compatible alias
kafka = ["kafka-producer"]
# Lightweight core (no rdkafka linkage) enables optional dep without rdkafka
kafka-core = ["dep:common-audit", "common-audit/kafka-core"]
integration-tests = []

