[package]
name = "payment-service"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-helpers = []

[dependencies]
common-auth = { path = "../common/auth" }
common-security = { path = "../common/security" }
common-audit = { path = "../common/audit" }
tower-http = { version = "0.5", features = ["cors"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
anyhow = "1"
thiserror = "1"
hyper = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
common-money = { path = "../common/money" }
common-http-errors = { path = "../common/http-errors" }
once_cell = "1.19"
prometheus = "0.13"
tower = "0.5"
