[package]
name = "payment-service"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-helpers = []
# Canonical producer feature (full rdkafka path & audit emission)
kafka-producer = ["common-security/kafka", "common-audit/kafka-producer", "rdkafka"]
# Legacy alias retained for scripts / older docs
kafka = ["kafka-producer"]
# Lightweight core (no rdkafka) for compile-only references
kafka-core = ["common-security/kafka-core", "common-audit/kafka-core"]

[dependencies]
common-auth = { path = "../common/auth" }
common-security = { path = "../common/security" }
common-audit = { path = "../common/audit" }
tower-http = { version = "0.5", features = ["cors"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
anyhow = "1"
thiserror = "2"
hyper = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
common-money = { path = "../common/money" }
common-http-errors = { path = "../common/http-errors" }
once_cell = "1.19"
prometheus = "0.13"
tower = "0.5"
rdkafka = { version = "0.29", optional = true, features=["cmake-build","libz"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"

[build-dependencies]

