[package]
name = "product-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common-auth = { path = "../common/auth" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
anyhow = "1"
thiserror = "1"
hyper = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate", "uuid", "chrono", "bigdecimal"] }
rdkafka = { version = "0.29", default-features = false, features = ["cmake-build", "tokio", "libz", "libz-static"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.3", features = ["serde"] }
common-money = { path = "../common/money" }
common-audit = { path = "../common/audit", features=["kafka"] }
common-security = { path = "../common/security" }
common-http-errors = { path = "../common/http-errors" }
once_cell = "1"
prometheus = { version = "0.13", default-features = false, features = ["process"] }

[features]
# (No explicit offline feature; controlled via SQLX_OFFLINE env var.)

[dev-dependencies]
tower = "0.5"
http = "0.2"
http-body-util = "0.1"
bytes = "1"
