[package]
name = "common-audit"
version = "0.1.0"
authors = ["NovaPOS Team"]
edition = "2021"

[features]
default = ["kafka"]
kafka = ["rdkafka"]

[dependencies]
axum = { version = "0.7", features=["json"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features=["serde","v4"] }
rdkafka = { version = "0.29", optional = true, features=["cmake-build", "libz", "libz-static"] }
thiserror = "1"
chrono = { version = "0.4", features=["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features=["macros","rt","rt-multi-thread"] }
