[package]
name = "common-auth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tower = "0.4"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
