[package]
name = "common-http-errors"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
http = "0.2"
once_cell = "1"
prometheus = "0.13"

[features]
test-helpers = []
